--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,6 +45,9 @@
 
     By using the Power Scout App, you agree to these Terms and Conditions.
 </string>
+    <string name="esp8266_url">http://192.168.62.24/getSensorData</string>
+
+
 
 
 </resources>
